--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rs-json"
 version = "0.1.0"
 edition = "2021"
-
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,3 +10,4 @@ edition = "2021"
 anyhow = "1.0.69"
 clap = {version = "4", features = ["derive"]}
 itertools = "0.10.5"
+serde_json = "1.0.93"
