--- a/rust-json-parse-bench/Cargo.toml
+++ b/rust-json-parse-bench/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-json-parse-bench"
-version = "0.6.0"
+version = "0.6.2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 
@@ -11,5 +11,5 @@ anyhow = "1"
 clap = {version = "4", features = ["derive"]}
 rust-json-parse = {path = "../rust-json-parse"}
 serde_json = "1"
-simd-json = "0.7"
+simd-json = {version = "0.7", features = ["allow-non-simd"]}
 snmalloc-rs = "0.3"
