--- a/rust-json-parse/Cargo.toml
+++ b/rust-json-parse/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "rust-json-parse"
-version = "0.6.1"
+version = "0.6.2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
