--- a/rust-json-parse-bench/Cargo.toml
+++ b/rust-json-parse-bench/Cargo.toml
@@ -13,7 +13,7 @@ rust-json-parse = {path = "../rust-json-parse"}
 serde_json = "1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-snmalloc-rs = {version = "0.3"}
+rsbmalloc = {git = "https://github.com/AWBroch/binned-alloc-rs.git", tag = "v0.3.1"}
 
 [target.'cfg(any(target_feature = "neon", target_feature = "sse4.2"))'.dependencies]
 simd-json = {version = "0.7"}
